# uniandes-robotics-class-tf2-workshop

./: .gitignore  README.md  install_docker.sh
docker_demos/crazyflie/: Dockerfile  docker-compose.yml  setup.sh
docker_demos/moveit2/: Dockerfile  docker-compose.yml  setup.sh
docker_demos/nav2/: Dockerfile  docker-compose.yml  setup.sh
turtle_tf2_ws/: README.md
turtle_tf2_ws/docker/: Dockerfile  docker-compose.yml  setup.sh
turtle_tf2_ws/src/turtle_tf2/: package.xml  setup.py
turtle_tf2_ws/src/turtle_tf2/launch/: turtle_tf2_app.launch.yaml
turtle_tf2_ws/src/turtle_tf2/turtle_tf2/: turtle_tf2_broadcaster.py  turtle_tf2_listener.py
