<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_tf2</name>
  <version>0.1.0</version>
  <description>Turtle TF2 Demo. Taken from: https://docs.ros.org/en/foxy/Tutorials/Intermediate/Tf2/Tf2-Main.html</description>
  <maintainer email="cristobal.arroyo@ekumenlabs.com">Cristobal Arroyo</maintainer>
  <license>Apache Licence 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
